--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <a class="link superlink" href="#">Link 4</a>
     </section>
 
-    <script src="js/02_finding_elements.js"></script>
+    <script src="js/03_nodes.js"></script>
 </body>
 
 </html>
