--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <p onclick="alert('z paragrafu');">Tekst w tym akapicie.</p>
             <!-- W 6 zadaniu dodajemy do linku poniżej atrybut onclick="alert('kliknięto link');" -->
             <a class="link" href="#">Akapit Link 1</a><br>
+            <div></div>
             <a class="link" href="https://akademia108.pl">Akapit Link 2</a>
         </div>
         <div id="parSecond">
@@ -27,7 +28,7 @@
         <a class="link superlink" href="#">Link 4</a>
     </section>
 
-    <script src="js/03_nodes.js"></script>
+    <script src="js/04_making_adding_deleting_nodes.js"></script>
 </body>
 
 </html>
