--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <a class="link superlink" href="#">Link 4</a>
     </section>
 
-    <script src="js/04_making_adding_deleting_nodes.js"></script>
+    <script src="js/05_dom_manipulation.js"></script>
 </body>
 
 </html>
