--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -28,7 +29,7 @@
         <a class="link superlink" href="#">Link 4</a>
     </section>
 
-    <script src="js/05_dom_manipulation.js"></script>
+    <script src="js/06_events.js"></script>
 </body>
 
 </html>
